chore: style changes to code blocks. fix word wrapping on code blocks. increase padding on top and bottom so horizontal scroll bar doesnt run over any text. add border around block and inline code. minor refactoring to code.scss to make it look pretty. new color variables for code to prevent duplication.

--- a/source/stylesheets/_base.scss
+++ b/source/stylesheets/_base.scss
@@ -39,8 +39,9 @@ h4 { font-size: 1.3rem; }
 h5 { font-size: 1.25rem; }
 
 code {
-  color: #f8f8f2;
-  background-color: #131313;
+  color: $code-fg;
+  background-color: $code-bg;
+  border: 2px solid $code-gutter-bg;
   font-size: 1rem;
 }
 
@@ -178,6 +179,8 @@ html, body, .wrapper {
   h3 { font-size: 1.25rem; }
 
   p { font-size: 1rem; }
+
+  code { font-size: 0.9rem; }
 
   pre.highlight { font-size: 0.4rem; }
 
